# key-attest-relay

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
aosp/frameworks/native/libs/binder/include/binder/: Binder.h  BpBinder.h  Functional.h  IBinder.h  IInterface.h  IPCThreadState.h  IServiceManager.h  Parcel.h  ProcessState.h  RecordedTransaction.h  RpcServer.h  RpcSession.h  RpcThreads.h
aosp/frameworks/native/libs/binder/ndk/include_ndk/android/: binder_ibinder.h
aosp/frameworks/native/libs/binder/ndk/include_platform/android/: binder_manager.h
aosp/hardware/interfaces/security/keymint/support/include/keymint_support/: keymint_tags.h
aosp/hardware/interfaces/security/keymint/support/include/remote_prov/: remote_prov_utils.h
aosp/system/libfmq/base/fmq/: MQDescriptorBase.h
binder/: Cargo.toml
binder/rpcbinder/: Android.bp
binder/rpcbinder/src/server/: android.rs  trusty.rs
binder/src/: lib.rs  parcel.rs  service.rs  system_only.rs
binder/src/parcel/: parcelable.rs
binder/sys/: build.rs
common/: Cargo.toml
common/src/: lib.rs
injector/: Cargo.toml
injector/src/: main.rs
km-aidl/: Cargo.toml
km-aidl/src/: android_hardware_security_keymint_V4.rs  android_hardware_security_secureclock_V1.rs  android_system_keystore2_V5.rs  lib.rs  mangled.rs
libkarelay/: Cargo.toml  build.rs
libkarelay/include/: appid.h
libkarelay/src/: appid.cc  kaclient.rs  lib.rs
proto/: keyattest.proto
server/: Cargo.toml  build.rs
server/include/: km.h
server/src/: keymint_client.rs  km.cc  main.rs
