[package]
name = "ka-injector"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
libc = "0.2.180"
tonic = "*"
prost = "0.14"
tonic-prost = "*"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
url = "2.5.8"
base64 = "0.22.1"

[build-dependencies]
tonic-prost-build = "*"
